ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-07-21 Daniel Andreca
	- GUI:
		* Fixed #1434: rootkit.log.php
	- ENGINE:
		* Subdomains and aliases emails were not removed when reseller/admin remove parent domain

2008-07-20 Daniel Andreca
	- GUI:
		* Add missing file
		* Cleaning gui/admin/domain_status_change.php
		* Fixed #1432: rv1279 /admin/domain_status_change.php r1281 reseller/alias_add.php white page
		* Add daemon request count in htaccess htaccess_user and htaccess_groups tables: gui/admin/ispcp_debugger.php
	- ENGINE:
		* Minor fix for engine/ispcp-als-mngr

2008-07-20 Markus Milkereit
	- ENGINE:
		* Fixed #755: Protected areas are not working

2008-07-20 Benedikt Heintel
	- GUI:
		* Fixed #1432

2008-07-19 Benedikt Heintel
	- GUI:
		* Fixed #1397: E-Mail on ticket response
		* Fixed #1402: awstats static not working
		* Fixed #1425: Include support for templates
		* Fixed #1431
	- TOOLS:
		* Updated phpMyAdmin to 2.11.7.1

2008-07-19 Jochen Manz
	- GUI:
		* Small fix for ispcp-lib.php

2008-07-18 Benedikt Heintel
	- GUI:
		* Fixed #1416: Missing menu when a client try to ad new email: client/mail_add.php
		* Fixed #1417: Template error and missing menu when a client try to enable autoresponder: client/mail_autoresponder_enable.php
		* Fixed #1418: Template error and missing menu when a client try to enable autoresponder: client/mail_autoresponder_edit.php
		* Fixed #1419: Template error and missing menu when a client try to create catch all: client/mail_catchall_add.php
		* Fixed #1420: Missing menu when a client try to edit email: client/mail_edit.php
		* Fixed #1421: Client can't change sql password: client/sql_change_password.php (template error)
		* Fixed #1423: e-mail as normal mail and e-mail forward not in /etc/courier/userdb
		* Fixed #1424: Adminstrator password created by setup is truncated at 8 characters
		* Fixed #1428: ispell is needed for webmail
	- LANGUAGES:
		* Added Chinese (Hongkong)
		* Added Galician